assets/css/estilos.css
.borde {border: 1px solid blue;}
* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
}
html, body {
    overflow-x: hidden;
}
body {
    color: black;
    font-size: 16px;
    height: 100%;
}

:root {
     --dedalo: #D2C29D;
     --morado: #3F00FF;
     --rojo: #FF2400;
     --gris_menuus: #EBEBEB;
     --gris: rgb(7, 6, 6);
     --gris_claro: #c3c3c3;
     --negro30: rgba(0,0,0,0.3);
     --negro40: rgba(0,0,0,0.4);
     --negro50: rgba(0,0,0,0.5);
     --negro60: rgba(0,0,0,0.6);
     --negro70: rgba(0,0,0,0.7);
     --blanco50: rgba(255,255,255,0.5);
     --blanco60: rgba(255,255,255,0.6);
     --blanco70: rgba(255,255,255,0.7);
     --blanco80: rgba(255,255,255,0.8);
     --blanco90: rgba(255,255,255,0.9);
     --blanco95: rgba(255,255,255,0.95);
     --trans: all 0.2s ease-in-out;
}

::selection {
     background: var(--dedalo);
     color: black;
}
::-moz-selection {
     background: var(--dedalo);
     color: black;
}

.ocultar {display: none;}

ul {
     list-style: none;
}

button, input, select, textarea {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
}

/* -------------------------------IDS */
h1 {
    font-family: 'Raleway', sans-serif;
    font-weight: 700;
    font-size: 3em;
    color: #000000;
    letter-spacing: 2px;
    line-height: 1em;
    margin-bottom: 10px;
}
    h1 span {
        font-family: 'Montserrat', sans-serif;
        font-size: 0.4em;
        font-weight: 500;
        color: #272727;
        letter-spacing: 0.5px;
        line-height: 1.2em;
    }
h2 {font-size: 2.7em;
    margin-bottom:22px;
}

h2, span, h3 {
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    letter-spacing: 0.7px;
    line-height: 1.1em;
}
span, h3 {
    font-size: 1.3em;
    padding-bottom: 5px;
    display: block;
}
h4, p, footer {font-family: 'ABeeZee', sans-serif;}
h4 {
    font-size: 1.2em;
    margin: 10px 0;
}
p {
    font-size: 0.9em;
    line-height: 1.6em;
    letter-spacing: 0.2px;
}
footer {
    font-size: 0.7em;
    letter-spacing: 0.35px;
    color: var(--negro40);
    background-color: var(--gris_menuus);
    display: grid;
    justify-content: space-between;
    align-items: center;
    grid-auto-flow: column;
    height: 95px;
    padding: 0 20px 0 40px;
}
footer ul li a {color:var(--negro40);}
ul li a {
    text-decoration: none;
    color: black;
    padding: 18px;
    transition: var(--trans);
}
ul li a:hover {color: var(--morado);}

/* ----- FONDOS - BKGR */
.bkgr-qrs {
    position: absolute;
    background: url('../images/bkgr-qrs@2x.jpg')top center;
    background-repeat: no-repeat;
    background-size: 115% auto;
    width: 100%;
    height: 2550px;
    z-index: -1;
}
.bkgr-triangulos {
    position: absolute;
    top: 35px;
    background: url('../images/bkgr-triangulos.svg')top center;
    background-repeat: no-repeat;
    background-size: 100% auto;
    width: 100%;
    height: 2500px;
    z-index: -1;
}

/* ----- BOTONES */
.boton-primario {
    cursor: pointer;
    border: 0;
    border-radius: 6px;
    font-family: ABeeZee-Regular;
    font-size: 0.9em;
    margin: 0 auto;
    padding: 18px 32px;
    letter-spacing: 1px;
}
.boton-primario, .boton-planes {
    background-color: var(--morado);
    background: radial-gradient(circle, rgba(63,0,255,1) 0%, rgba(63,0,255,1) 100%);
    color: white;
    text-decoration: none;
    transition: var(--trans);
}
.boton-primario:hover, .boton-planes:hover {
    color: white;
    background: var(--morado);
    background: radial-gradient(circle, rgba(0,90,255,1) 0%, rgba(63,0,255,1) 100%);
    transition: var(--trans);
    box-shadow: 0 16px 22px -7px rgba(0,0,0,0.25);
}

/* ----- ENCABEZADO */
#encabezado {
    height: 90vh;
}
.logo, nav {
    position: fixed;
}
.logo, nav ul li {background: var(--blanco95);}
.logo, nav {z-index: 9999;}
.logo {
    width: 180px;
    left: 0;
    padding: 24px;
}
nav {right: 0;}
    nav ul li {
        display: inline-block;
        padding: 26px 0;
        margin: 0 -4px;
    }
    nav ul li a {
        background: none;
        font-family: 'ABeeZee', sans-serif;
        font-size: 15px;
        letter-spacing: 0.9px;
        padding: 26px 22px;
        transition: var(--trans);
    }
    nav ul li a:hover {
        color: var(--rojo);
        box-shadow: 0 16px 22px -7px rgba(0,0,0,0.2);
    }
#hero {
    height: 90vh;
    display: grid;
    align-content: center;
    grid-template-columns: 55% 45%;
}
#hero .span-morado {
    font-family: 'Montserrat', sans-serif;
    color: var(--morado);
    font-size: 1em;
    display: block;
    padding: 15px 0 30px 0;
}
#hero .span-morado::before {
    content: "─ ";
    color: var(--morado);
}
#hero .textos {padding-left: 30%;}
#hero .imagenes {position: relative;}
#hero .celular, #hero .qr {position: absolute;}
#hero .imagenes .celular {
    max-width: 500px;
    left:-15%;
    top: -35px;
}
#hero .imagenes .qr {
    max-width: 150px;
    bottom: -40px;
    left: 245px;
}
/* ----- CONFIANZA */
#confianza {
    color: white;
    height: 90vh;
    display: grid;
    grid-template-columns: 45% 55%;
    align-content: center;
}
#confianza .triangulos {position: relative;height: 50vh;}
#confianza .triangulo-1, #confianza .triangulo-2 {position: absolute;}
#confianza .triangulo-1 {
    width: 100%;
    max-width: 450px;
    min-width: 200px;
    top: -60%;
    left: -2px;
}
#confianza .triangulo-2 {
    width: 100%;
    max-width: 300px;
    min-width: 100px;
    top: 50%;
    left: 35%;
}
#confianza .textos {
    display: grid;
    flex-flow: column;
    align-content: center;
    text-align: left;
    padding: 0 18% 0 15%;
    margin-top: -20px;
}
#confianza .icono-covid {
    width: 60px;
    margin-bottom: 20px;
}

/* ----- CAMBIOS ILIMITADOS */
#cambios-ilimitados {
    position: relative;
    height: 100vh;
    display: grid;
    grid-template-columns: 65% 35%;
    align-content: center;
}
#cambios-ilimitados .icono-infinito {
    margin-right: 0;
    margin-left: auto;
}
#cambios-ilimitados .textos {
    text-align: right;
    padding: 10% 24% 0 16%;
}
#cambios-ilimitados .triangulo-3 {
    width: 30%;
    max-width: 450px;
    min-width: 200px;
    position: absolute;
    top: 50px;
    right: 0;
}

/* ----- COMO FUNCIONA */
#como-funciona, #como-funciona .items {
    display: grid;
    justify-content: center;
}
#como-funciona {
    padding: 0 8%;
    margin: 0;
    color: white;
    align-content: center;
    text-align: center;
    height: 60vh;
    background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.4)100%), url('../images/photo-restaurant-jakub-kapusnak-unsplash.jpg') no-repeat center center;
    background-size: cover;
    background-attachment: fixed;
}
#como-funciona .items {
    grid-template-columns: repeat(3, minmax(250px, 400px));
    grid-gap: 50px;
    margin-bottom: 35px;
}
#como-funciona h3 {
    font-weight: 600;
    font-size: 1.5em;
    margin-bottom: 10px;
}

/* ----- BENEFICIOS */
#beneficios {
    background: url('../images/bkgr-beneficios@2x.jpg')no-repeat top center;
    background-size: cover;
    padding: 7% 0;
    height: 95vh;
    display: grid;
    justify-content: center;
    align-items: center;
    grid-template: repeat(1, 25% 25%) / repeat(3, minmax(100px, 300px));
    gap: 170px 10%;
    text-align: center;
}
#beneficios .circulos {
    position: relative;
    display: grid;
    align-items: center;
    justify-items: center;
    
}
#beneficios .circulo-rojo, #beneficios .isotipo {
    position: absolute;
}
#beneficios .circulo-rojo {width: 100%;}
#beneficios .isotipo {width: 35%;}

/* ----- FOOTER */
footer ul, footer ul li, footer .mr {display: flex; align-items: center;}
footer .links {
    display: flex;
    border-top: 1px solid var(--gris_claro);
    padding-top: 8px;
}
footer .mr {margin-right: 10px;}
footer .mr::before {
    content: "";
    background: url('../images/m-gris.svg')no-repeat center center;
    background-size: 18px 18px;
    width: 18px;
    height: 18px;
    display: inline-block;
    margin-right: 5px;
    margin-bottom: 10px;
}
footer .redes {
    font-size: 1.3em;
}

 /* BURGER MENU */
    /* .logo.zindex {z-index: -1;} */
    /* .triangulo-1.zindex {z-index: -1;} */
    .hideoverflow {
        overflow: hidden;
    }
    .burger-button {
        transition: var(--transicion);
    }
    .menu-principal.ocultar {display: none;}
    .burger-menu {
        position: absolute;
        background: rgba(255,255,255,0.95);
        z-index: 9999;
        height: 100vh;
        right: 0;
        width: 0;
        text-align: center;
        transition: all 0.4s ease-in-out;
    }
    .burger-menu.is-active {
        width: 100vw;
    }
    .burger-menu ul {
        height: 100vh;
        display: grid;
        align-items: center;
        justify-items: center;
        padding: 8% 0;
    }
    .burger-menu ul li a {
        font-family: 'Montserrat', sans-serif;
        letter-spacing: 0.5px;
        border-bottom: 1px solid rgba(255,255,255,0.0);
        transition: var(--trans);
    }
    .burger-menu ul li a:hover {
        color: var(--rojo);
        border-bottom: 3px solid var(--rojo);
    }
    a.boton-cerrar {
        position: absolute;
        background: url("../images/close.svg") no-repeat center center;
        background-size: cover;
        width: 50px;
        height: 50px;
        right: 10px;
        cursor: pointer;
        margin: 7px 7px 0;
        z-index: 9999;
        transition: var(--transicion);
    }
    a.boton-cerrar:hover {
        background: url("../images/close-hover.svg") no-repeat center center;
        background-size: 3em; 
    }
    .boton-cerrar img {
        width: 50px;
    }

